Fix #28 safari image stretching

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.img-fluid {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
